--- a/index.html
+++ b/index.html
@@ -5,16 +5,145 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mern-Website</title>
   <style>
-  h1{
-    color:aliceblue;
-    text-align: center;
-    background-color: darkgrey;
-  }
-  </style>
+    * {
+        margin: 0px;
+        padding: 0px;
+    }
+
+
+    body {
+        height: 100vh;
+        width: 100vw;
+        background-color: #f5f5f5;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: center;
+    }
+
+
+    .section1 {
+        width: 70%;
+        height: 12rem;
+        background-color: aquamarine;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+    .profile-img-section {
+        width: 40%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+
+    .profile-data {
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+
+
+    .profile-img {
+        height: 8rem;
+        width: 8rem;
+        border-radius: 50%;
+    }
+
+
+    .section2 {
+        width: 70%;
+        height: 12rem;
+        /* background-color: aquamarine; */
+        border: 1px solid aquamarine;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        /* padding: 10px; */
+    }
+
+
+    .section3 {
+        width: 70%;
+        height: 20rem;
+        /* background-color: aquamarine; */
+        border: 1px solid aquamarine;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        /* padding: 10px; */
+    }
+
+
+    .section4 {
+        width: 70%;
+        height: 15rem;
+        /* background-color: aquamarine; */
+        border: 1px solid aquamarine;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: start;
+        /* padding: 10px; */
+    }
+
+
+    .section-title {
+        /* height: 10%; */
+        color: aquamarine;
+        font-weight: bold;
+    }
+
+
+    .ed-table {
+        width: 100%;
+        border: 1px solid gray;
+        border-collapse: collapse;
+    }
+
+
+    th,
+    td {
+        padding: 1rem;
+        border: 1px solid gray;
+    }
+
+
+    .companies {
+        font-weight: bold;
+
+
+        color: aquamarine;
+    }
+</style>
 </head>
 <body>
-  <h1>
-    Hello world
-  </h1>
+  <div class="section1">
+    <div class="profile-img-section">
+        <img src="https://th.bing.com/th/id/OIP.7rsD5RX9MBDOObi-Pa7fWgHaHa?rs=1&pid=ImgDetMain" alt="men" class='profile-img' />
+    </div>
+      <div class="profile-data">
+          <h1>Dinesh J</h1>
+          <h3>jdinesh2554@gmail.com</h3>
+      </div>
+  </div>
+  <div class="section2">
+    <p>
+      <h
+    </p>
+  </div>
+  <div class="section4">
+
+  </div>
 </body>
 </html>
