--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mern-Website</title>
+  <title>Resume</title>
   <style>
     * {
         margin: 0px;
@@ -26,7 +26,7 @@
     .section1 {
         width: 70%;
         height: 12rem;
-        background-color: aquamarine;
+        background-color: rgb(58, 82, 74);
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -49,6 +49,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
+        color: aliceblue;
     }
 
 
@@ -123,7 +124,7 @@
         font-weight: bold;
 
 
-        color: aquamarine;
+        color: cyan;
     }
 </style>
 </head>
@@ -138,12 +139,48 @@
       </div>
   </div>
   <div class="section2">
+    <h1 class="section-title">Objective</h1>
     <p>
-      <h
+      Passionate about building high-quality web applications by utilizing my comprehensive full-stack development skills to contribute to innovative projects.
     </p>
   </div>
+  <div class="section3">
+    <h1 class="section-title">Education</h1>
+    <table class="ed-table">
+      <tr>
+        <th>Degree</th>
+        <th>Campus</th>
+        <th>Score %</th>
+      </tr>
+      <tr>
+        <th>degree1</th>
+        <th>Campus1</th>
+        <th>85 %</th>
+      </tr>
+      <tr>
+        <th>degree2</th>
+        <th>Campus2</th>
+        <th>80 %</th>
+      </tr>
+      <tr>
+        <th>degree3</th>
+        <th>Campus3</th>
+        <th>89 %</th>
+      </tr>
+    </table>
+  </div>
   <div class="section4">
+    <h1 class="section-title">Internship</h1>
+    <p>
+      <span class="companies">ACCOUNT MANAGER / VANARSDEL, LTD.</span>
+JUNE 20XX – PRESENT
+Managed and grew key accounts by developing strong relationships, identifying opportunities, and implementing effective sales strategies.
+<br><br>
+<span class="companies">SALES ASSOCIATE / VANARSDEL, LTD. </span>
+OCTOBER 20XX – JUNE 20XX 
+Drove revenue growth through exceptional customer service and strategic sales techniques as a Sales Associate.
 
+    </p>
   </div>
 </body>
 </html>
